# aggregated_plan

./: .cursorrules  .gitignore  CLAUDE.md  CODE_ERRORS_ANALYSIS.md  README.md  SPEC_FONCTIONNELLE.md  SPEC_TECHNIQUE.md  package.json  pnpm-lock.yaml  tsconfig.json
backend/: .env.example  .eslintrc.json  Cargo.toml  jest.config.ts  package.json  tarpaulin.toml  tsconfig.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: context.rs  main.rs  state.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: dto.rs  errors.rs  lib.rs  repositories.rs  services.rs  use_cases.rs
backend/crates/cli/: Cargo.toml  README.md
backend/crates/cli/graphql/: activity_journal.graphql  append_task_notes.graphql  complete_task.graphql  create_task.graphql  current_activity.graphql  daily_dashboard.graphql  find_task_by_source_id.graphql  find_tasks_by_title.graphql  force_sync.graphql  get_configuration.graphql  get_task.graphql  list_alerts.graphql  list_tasks.graphql  priority_matrix.graphql  reset_urgency.graphql  resolve_alert.graphql  schema.graphql  set_tracking_state.graphql  start_activity.graphql  stop_activity.graphql  update_configuration.graphql  update_priority.graphql  update_task_status.graphql
backend/crates/cli/src/: cli.rs  client.rs  commands.rs  lookup.rs  main.rs  output.rs  queries.rs
backend/crates/cli/tests/: integration.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: errors.rs  lib.rs  rules.rs  types.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/src/: connectors.rs  database.rs  dedup.rs  lib.rs  sync.rs
backend/migrations/sqlite/: 001_initial.sql
backend/src/: index.test.ts  index.ts
backend/src/application/: allocation-repository.ts  assignment-repository.ts  availability-repository.ts  availability-use-cases.ts  developer-repository.ts  developer-use-cases.ts  index.ts  jira-connector.ts  jira-import-use-cases.ts  milestone-repository.ts  milestone-use-cases.ts  project-repository.ts  project-use-cases.ts  providers.ts  staffing-use-cases.ts  task-repository.ts
backend/src/domain/: availability-domain.ts  conflict-domain.ts  domain-errors.ts  index.ts  jira-mapping.ts  milestone-domain.ts  project-domain.ts  result.ts  staffing-domain.ts
backend/src/infrastructure/: in-memory-repositories.ts  in-memory-store.ts  index.ts  jira-http-client.ts  providers.ts  server-config.test.ts  server-config.ts
(+216 files in other folders)
